[UPDATE] DB column name 변경
