# ulink/models/social.js
@@ -6,10 +6,10 @@ const social = {
     /*
         팔로잉 하는 사람들의 목록
         - 토큰으로 유저에 해당하는 소셜의 정보를 가져온다.
-        - 가져오기: 팔로잉한 사람들의 idx, name, profile_image
+        - 가져오기: 팔로잉한 사람들의 idx, name, profileImage
     */
     getFollowing: async (userIdx) => {
-        const query = `SELECT user_idx, name, profile_image FROM ${table2} WHERE user_idx IN (SELECT following_idx FROM ${table} WHERE user_idx = "${userIdx}")`;
+        const query = `SELECT userIdx, name, profileImage FROM ${table2} WHERE userIdx IN (SELECT followingIdx FROM ${table} WHERE userIdx = "${userIdx}")`;
         try {
             const result = await pool.queryParam(query);
             return result;
@@ -25,10 +25,10 @@ const social = {
     /*
         팔로워하는 사람들의 목록
         - 토큰으로 유저에 해당하는 소셜의 정보를 가져온다.
-        - 가져오기: 팔로워한 사람들의 idx, name, profile_image
+        - 가져오기: 팔로워한 사람들의 idx, name, profileImage
     */
     getFollower: async (userIdx) => {
-        const query = `SELECT user_idx, name, profile_image FROM ${table2} WHERE user_idx IN (SELECT user_idx FROM ${table} WHERE following_idx = "${userIdx}")`;
+        const query = `SELECT userIdx, name, profileImage FROM ${table2} WHERE userIdx IN (SELECT userIdx FROM ${table} WHERE followingIdx = "${userIdx}")`;
         try {
             const result = await pool.queryParam(query);
             console.log('쿼리로 뽑아온 데이터: ', result);
@@ -46,13 +46,13 @@ const social = {
         팔로잉하는 사람 추가하기
     */
     postFollowing: async (userIdx, idx) => {
-        const fields = 'user_idx, following_idx';
+        const fields = 'userIdx, followingIdx';
         const questions = '?,?';
         const values = [userIdx, idx];
         const query = `INSERT INTO ${table}(${fields}) VALUES (${questions})`;
         try {
             const result = await pool.queryParamArr(query, values);
-            const followingIdx = result.following_idx;
+            const followingIdx = result.followingIdx;
             return followingIdx;
         } catch (err) {
             if (err.errno == 1062) {
@@ -67,7 +67,7 @@ const social = {
         팔로잉 하는 사람 중복 체크
     */
     checkFollowing: async (userIdx, idx) => {
-        const query = `SELECT * FROM ${table} WHERE following_idx = "${idx}" AND user_idx = "${userIdx}"`;
+        const query = `SELECT * FROM ${table} WHERE followingIdx = "${idx}" AND userIdx = "${userIdx}"`;
         try {
             const result = await pool.queryParam(query);
             if (result.length === 0) {
@@ -88,7 +88,7 @@ const social = {
         팔로잉 하는 사람 삭제
     */
     deleteFollowing: async (idx) => {
-        const query = `DELETE FROM ${table} WHERE following_idx = "${idx}"`;
+        const query = `DELETE FROM ${table} WHERE followingIdx = "${idx}"`;
         try {
             const result = await pool.queryParamArr(query);
             console.log('Delete post - result: ', result);
