# ulink/routes/user.js
@@ -9,7 +9,7 @@ router.post('/signup', userController.signUp);
 router.post('/signin', userController.signIn);
 router.get('/profile/:id', userController.getProfileId);
 router.get('/profile', userController.getProfile);
-router.post('/profile', authUtil.checkToken, upload.single('profile_image'), userController.updateProfile);
+router.post('/profile', authUtil.checkToken, upload.single('profileImage'), userController.updateProfile);
 
 
 module.exports = router;
